weave-gitops-enterprise-eks/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /grafana
    # rewrite:
    #   uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: kube-prometheus-stack-grafana
