weave-gitops-enterprise-eks/mccp-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mccp-chart-wkp-ui
spec:
  hosts:
  - "*"
  gateways:
  - public-gateway
  http:
  - match:
    - uri:
        prefix: /wkp
    # rewrite:
    #   uri: "/"
    route:
    - destination:
        port:
          number: 8000
        host: wkp-ui-server
